tidy up beaks grain dictionary beaks

--- a/beaks-grain-dictionary-beaks.ipynb
+++ b/beaks-grain-dictionary-beaks.ipynb
@@ -56,130 +56,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grains_dictionary = construct_grains_dictionary(file_list=all_files, plot=False)\n",
+    "grains_dictionary = construct_grains_dictionary(file_list=all_files, plot=True)\n",
     "clear_output()\n",
     "print(f\"found {len(grains_dictionary)} grains in {len(all_files)} files\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from topostats.io import LoadScans\n",
-    "from beaks import make_bounding_box_square, pad_bounding_box\n",
-    "\n",
-    "plot = False\n",
-    "\n",
-    "grains_dictionary: dict[any] = {}\n",
-    "\n",
-    "loadscans = LoadScans(all_files, channel=\"dummy\")\n",
-    "loadscans.get_data()\n",
-    "img_dict = loadscans.img_dict\n",
-    "\n",
-    "bbox_padding = 10\n",
-    "grain_index = 0\n",
-    "for filename, file_data in img_dict.items():\n",
-    "    try:\n",
-    "        print(f\"image {filename}\")\n",
-    "        # print(f\"getting data from {filename}\")\n",
-    "        # print(file_data.keys())\n",
-    "        try:\n",
-    "            nodestats_data = file_data[\"nodestats\"][\"above\"][\"stats\"]\n",
-    "        except KeyError as e:\n",
-    "            nodestats_data = None\n",
-    "\n",
-    "        image = file_data[\"image\"]\n",
-    "        ordered_trace_data = file_data[\"ordered_traces\"][\"above\"]\n",
-    "        for current_grain_index, grain_ordered_trace_data in ordered_trace_data.items():\n",
-    "            # print(f\"  grain {current_grain_index}\")\n",
-    "            grains_dictionary[grain_index] = {}\n",
-    "            grains_dictionary[grain_index][\"molecule_data\"] = {}\n",
-    "            grain_node_coordinates = []\n",
-    "            for current_molecule_index, molecule_ordered_trace_data in grain_ordered_trace_data.items():\n",
-    "                molecule_data = {}\n",
-    "                molecule_data[\"ordered_coords\"] = molecule_ordered_trace_data[\"ordered_coords\"]\n",
-    "                molecule_data[\"heights\"] = molecule_ordered_trace_data[\"heights\"]\n",
-    "                molecule_data[\"distances\"] = molecule_ordered_trace_data[\"distances\"]\n",
-    "                bbox = molecule_ordered_trace_data[\"bbox\"]\n",
-    "                grains_dictionary[grain_index][\"molecule_data\"][current_molecule_index] = molecule_data\n",
-    "\n",
-    "                splining_coords = file_data[\"splining\"][\"above\"][current_grain_index][current_molecule_index][\n",
-    "                    \"spline_coords\"\n",
-    "                ]\n",
-    "                molecule_data[\"spline_coords\"] = splining_coords\n",
-    "\n",
-    "                # print(molecule_ordered_trace_data.keys())\n",
-    "            bbox_square = make_bounding_box_square(bbox[0], bbox[1], bbox[2], bbox[3], image.shape)\n",
-    "            bbox_padded = pad_bounding_box(\n",
-    "                bbox_square[0], bbox_square[1], bbox_square[2], bbox_square[3], image.shape, padding=bbox_padding\n",
-    "            )\n",
-    "            added_left = bbox_padded[1] - bbox[1]\n",
-    "            added_top = bbox_padded[0] - bbox[0]\n",
-    "\n",
-    "            image_crop = image[\n",
-    "                bbox_padded[0] : bbox_padded[2],\n",
-    "                bbox_padded[1] : bbox_padded[3],\n",
-    "            ]\n",
-    "            full_grain_mask = file_data[\"grain_masks\"][\"above\"]\n",
-    "            grains_dictionary[grain_index][\"image\"] = image_crop\n",
-    "            grains_dictionary[grain_index][\"full_image\"] = image\n",
-    "            grains_dictionary[grain_index][\"bbox\"] = bbox_padded\n",
-    "            grains_dictionary[grain_index][\"added_left\"] = added_left\n",
-    "            grains_dictionary[grain_index][\"added_top\"] = added_top\n",
-    "            grains_dictionary[grain_index][\"padding\"] = bbox_padding\n",
-    "            mask_crop = full_grain_mask[\n",
-    "                bbox_padded[0] : bbox_padded[2],\n",
-    "                bbox_padded[1] : bbox_padded[3],\n",
-    "            ]\n",
-    "            grains_dictionary[grain_index][\"mask\"] = mask_crop\n",
-    "            grains_dictionary[grain_index][\"filename\"] = file_data[\"filename\"]\n",
-    "            grains_dictionary[grain_index][\"pixel_to_nm_scaling\"] = file_data[\"pixel_to_nm_scaling\"]\n",
-    "\n",
-    "            # grab node coordinates\n",
-    "            all_node_coords = []\n",
-    "            if nodestats_data is not None:\n",
-    "                try:\n",
-    "                    grain_nodestats_data = nodestats_data[current_grain_index]\n",
-    "                    for node_index, node_data in grain_nodestats_data.items():\n",
-    "                        node_coords = node_data[\"node_coords\"]\n",
-    "                        for node_coord in node_coords:\n",
-    "                            all_node_coords.append(node_coord)\n",
-    "                except KeyError as e:\n",
-    "                    if \"grain_\" in str(e):\n",
-    "                        # grain has no nodestats data here, skip\n",
-    "                        pass\n",
-    "\n",
-    "            grains_dictionary[grain_index][\"node_coords\"] = np.array(all_node_coords)\n",
-    "\n",
-    "            grain_index += 1\n",
-    "    except KeyError as e:\n",
-    "        if \"ordered_traces\" in str(e):\n",
-    "            print(f\"no ordered traces found in {filename}\")\n",
-    "            continue\n",
-    "        raise e\n",
-    "\n",
-    "if plot:\n",
-    "    for grain_index, grain_data in grains_dictionary.items():\n",
-    "        print(f\"grain {grain_index}\")\n",
-    "        print(grain_data[\"filename\"])\n",
-    "        print(grain_data[\"pixel_to_nm_scaling\"])\n",
-    "        image = grain_data[\"image\"]\n",
-    "        plt.imshow(image)\n",
-    "        for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
-    "            ordered_coords = molecule_data[\"ordered_coords\"]\n",
-    "            plt.plot(ordered_coords[:, 1], ordered_coords[:, 0], \"r\")\n",
-    "        all_node_coords = grain_data[\"node_coords\"]\n",
-    "        if all_node_coords.size > 0:\n",
-    "            plt.plot(all_node_coords[:, 1], all_node_coords[:, 0], \"b.\")\n",
-    "        plt.show()\n",
-    "\n",
-    "        mask = grain_data[\"mask\"][:, :, 1]\n",
-    "        plt.imshow(mask)\n",
-    "        plt.show()"
    ]
   },
   {
@@ -191,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
