add node coords to plots

--- a/beaks-grain-dictionary-all.ipynb
+++ b/beaks-grain-dictionary-all.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grains_dictionary = construct_grains_dictionary(file_list = files, plot=False)\n",
+    "grains_dictionary = construct_grains_dictionary(file_list=files, plot=False)\n",
     "clear_output()\n",
     "print(f\"found {len(grains_dictionary)} grains in {len(files)} files\")"
    ]
@@ -65,7 +65,7 @@
    "source": [
     "grains_save_dir = base_dir / \"grain-dictionaries\"\n",
     "assert grains_save_dir.exists()\n",
-    "with open(grains_save_dir / f\"grains-{today}.pkl\", \"wb\") as f:\n",
+    "with open(grains_save_dir / f\"grains-all-{today}.pkl\", \"wb\") as f:\n",
     "    pickle.dump(grains_dictionary, f)"
    ]
   }
