--- a/beaks-process-grain-dictionary.ipynb
+++ b/beaks-process-grain-dictionary.ipynb
@@ -12,6 +12,7 @@
     "import numpy.typing as npt\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.interpolate import interp1d\n",
+    "from skimage.measure import label, regionprops\n",
     "\n",
     "from topostats.measure.curvature import (\n",
     "    discrete_angle_difference_per_nm_circular,\n",
@@ -37,7 +38,8 @@
     "assert base_dir.exists()\n",
     "data_dir = base_dir / \"grain-dictionaries\"\n",
     "assert data_dir.exists()\n",
-    "filename = \"grains_with_beaks_D-2025-03-04-T-13-35.pkl\"\n",
+    "filename = \"grains_with_beaks_D-2025-03-05-T-15-33.pkl\"\n",
+    "# filename = \"grains-all-D-2025-03-05-T-15-36.pkl\"\n",
     "assert (data_dir / filename).exists()\n",
     "\n",
     "# load the dictionary\n",
@@ -54,6 +56,7 @@
    "outputs": [],
    "source": [
     "stats = {}\n",
+    "plot = True\n",
     "\n",
     "for grain_index, grain_data in grains_dictionary.items():\n",
     "    print(f\"grain {grain_index}\")\n",
@@ -68,6 +71,8 @@
     "    bbox_padding = grain_data[\"padding\"]\n",
     "    bbox_added_left = grain_data[\"added_left\"]\n",
     "    bbox_added_top = grain_data[\"added_top\"]\n",
+    "    blob_mask = image > 3.0\n",
+    "    node_coords = grain_data[\"node_coords\"]\n",
     "\n",
     "    grain_beak_data = {}\n",
     "\n",
@@ -75,6 +80,13 @@
     "\n",
     "    # plt.imshow(full_image)\n",
     "    # plt.show()\n",
+    "\n",
+    "    # get crossing points from nodestats\n",
+    "\n",
+    "    # blob / crossing distinuishing\n",
+    "    # find blobs\n",
+    "    labelled_blobs = label(blob_mask)\n",
+    "    blob_regionprops = regionprops(labelled_blobs)\n",
     "\n",
     "    # ignore erroneously small splines\n",
     "    min_splined_coords_num_points = 10\n",
@@ -84,6 +96,10 @@
     "        splined_coords_px_accurate_positions = splined_coords_px.copy()\n",
     "        splined_coords_px_accurate_positions[:, 0] -= bbox_added_top\n",
     "        splined_coords_px_accurate_positions[:, 1] -= bbox_added_left\n",
+    "        node_coords_px = node_coords.copy()\n",
+    "        node_coords_px[:, 0] -= bbox_added_top\n",
+    "        node_coords_px[:, 1] -= bbox_added_left\n",
+    "        \n",
     "        splined_coords_nm = splined_coords_px_accurate_positions * p2nm\n",
     "\n",
     "        molecule_beak_data = {}\n",
@@ -123,33 +139,39 @@
     "        curvature_defects = np.where(np.abs(resampled_curvatures) > curvature_threshold)[0]\n",
     "\n",
     "        # plot the molecule\n",
-    "        grain_fig, grain_ax = plt.subplots(figsize=(10, 10))\n",
-    "        grain_ax.imshow(image)\n",
-    "        grain_ax.imshow(mask_thick, alpha=0.5)\n",
-    "        grain_ax.plot(resampled_points_px[:, 1], resampled_points_px[:, 0], \"r\")\n",
+    "        if plot:\n",
+    "            grain_fig, grain_ax = plt.subplots(figsize=(10, 10))\n",
+    "            grain_ax.imshow(image)\n",
+    "            # grain_ax.imshow(mask_thick, alpha=0.5)\n",
+    "            grain_ax.imshow(blob_mask, alpha=0.5)\n",
+    "            grain_ax.plot(resampled_points_px[:, 1], resampled_points_px[:, 0], \"r\")\n",
+    "            if node_coords_px.size > 0:\n",
+    "                grain_ax.plot(node_coords_px[:, 1], node_coords_px[:, 0], \"b.\")\n",
     "        # change the coordinates of the plot to be in nanometers using the pixel to nm scaling ratio\n",
     "        for resampled_point_index, resampled_point in enumerate(resampled_points_px):\n",
     "            curvature = resampled_curvatures[resampled_point_index]\n",
     "            # colour the curvature to be between 0.5 and -0.5\n",
     "            colour = (curvature + 0.5) / 1\n",
-    "            grain_ax.plot(\n",
-    "                resampled_point[1],\n",
-    "                resampled_point[0],\n",
-    "                \"o\",\n",
-    "                c=plt.get_cmap(\"bwr\")(colour),\n",
-    "                markersize=5,\n",
-    "            )\n",
+    "            if plot:\n",
+    "                grain_ax.plot(\n",
+    "                    resampled_point[1],\n",
+    "                    resampled_point[0],\n",
+    "                    \"o\",\n",
+    "                    c=plt.get_cmap(\"bwr\")(colour),\n",
+    "                    markersize=5,\n",
+    "                )\n",
     "\n",
     "        molecule_beak_data[\"num_beaks_sharp\"] = len(curvature_defects)\n",
     "        for defect_index in curvature_defects:\n",
     "            resampled_point = resampled_points_px[defect_index]\n",
-    "            grain_ax.plot(\n",
-    "                resampled_point[1],\n",
-    "                resampled_point[0],\n",
-    "                \"o\",\n",
-    "                c=\"r\",\n",
-    "                markersize=10,\n",
-    "            )\n",
+    "            if plot:\n",
+    "                grain_ax.plot(\n",
+    "                    resampled_point[1],\n",
+    "                    resampled_point[0],\n",
+    "                    \"o\",\n",
+    "                    c=\"r\",\n",
+    "                    markersize=10,\n",
+    "                )\n",
     "\n",
     "        # find beaks at regions of moderate curvature\n",
     "        possible_beak_curvature_threshold = 0.2\n",
@@ -162,7 +184,8 @@
     "            # get the mask value at this point\n",
     "            mask_value = mask[int(slight_defect_point[0]), int(slight_defect_point[1])]\n",
     "            # mark this point with a blue hollow circle\n",
-    "            grain_ax.plot(slight_defect_point[1], slight_defect_point[0], \"o\", c=\"b\", markersize=8)\n",
+    "            if plot:\n",
+    "                grain_ax.plot(slight_defect_point[1], slight_defect_point[0], \"o\", c=\"b\", markersize=8)\n",
     "\n",
     "            slight_defect_explore_range_points = 2\n",
     "            # check if the explore range will be in bounds, also remember that the neighbouring points are checked hence the +1 -1\n",
@@ -203,7 +226,8 @@
     "            interpolator = interp1d(distance, possible_beak_points, kind=\"cubic\", axis=0)\n",
     "            interpolated_possible_beak_points = interpolator(alpha)\n",
     "\n",
-    "            grain_ax.plot(interpolated_possible_beak_points[:, 1], interpolated_possible_beak_points[:, 0], \"cyan\")\n",
+    "            if plot:\n",
+    "                grain_ax.plot(interpolated_possible_beak_points[:, 1], interpolated_possible_beak_points[:, 0], \"cyan\")\n",
     "\n",
     "            exploration_profile = []\n",
     "\n",
@@ -223,23 +247,25 @@
     "                    average_vector = (vector_to_previous_point + vector_to_next_point) / 2\n",
     "                    average_vector /= np.linalg.norm(average_vector)\n",
     "                    flipped_average_vector = -average_vector\n",
-    "                    grain_ax.plot(\n",
-    "                        [point[1], point[1] + flipped_average_vector[1] * 10],\n",
-    "                        [point[0], point[0] + flipped_average_vector[0] * 10],\n",
-    "                        \"g\",\n",
-    "                        alpha=0.5,\n",
-    "                    )\n",
+    "                    if plot:\n",
+    "                        grain_ax.plot(\n",
+    "                            [point[1], point[1] + flipped_average_vector[1] * 10],\n",
+    "                            [point[0], point[0] + flipped_average_vector[0] * 10],\n",
+    "                            \"g\",\n",
+    "                            alpha=0.5,\n",
+    "                        )\n",
     "\n",
     "                    # explore the mask in the direction of the vector\n",
     "                    possible_beak_vector_delta_px = 0.5\n",
     "                    exploration_current_position = point.astype(float)\n",
-    "                    grain_ax.plot(\n",
-    "                        exploration_current_position[1],\n",
-    "                        exploration_current_position[0],\n",
-    "                        \"o\",\n",
-    "                        c=\"yellow\",\n",
-    "                        markersize=2,\n",
-    "                    )\n",
+    "                    if plot:\n",
+    "                        grain_ax.plot(\n",
+    "                            exploration_current_position[1],\n",
+    "                            exploration_current_position[0],\n",
+    "                            \"o\",\n",
+    "                            c=\"yellow\",\n",
+    "                            markersize=2,\n",
+    "                        )\n",
     "                    # while still in the mask, continue forward\n",
     "                    while True:\n",
     "                        exploration_current_position += possible_beak_vector_delta_px * flipped_average_vector.astype(\n",
@@ -266,13 +292,14 @@
     "                            distance_to_explore_start = np.linalg.norm(exploration_current_position_int - point)\n",
     "                            exploration_profile.append(distance_to_explore_start)\n",
     "                            # mark the point\n",
-    "                            grain_ax.plot(\n",
-    "                                exploration_current_position_int[1],\n",
-    "                                exploration_current_position_int[0],\n",
-    "                                \"o\",\n",
-    "                                c=\"orange\",\n",
-    "                                markersize=2,\n",
-    "                            )\n",
+    "                            if plot:\n",
+    "                                grain_ax.plot(\n",
+    "                                    exploration_current_position_int[1],\n",
+    "                                    exploration_current_position_int[0],\n",
+    "                                    \"o\",\n",
+    "                                    c=\"orange\",\n",
+    "                                    markersize=2,\n",
+    "                                )\n",
     "                            break\n",
     "\n",
     "            exploration_profile = np.array(exploration_profile)\n",
@@ -287,38 +314,45 @@
     "                print(\n",
     "                    f\"possible defect confirmed, with distance {largest_exploration_distance} > {exploration_distance_defect_threshold_nm} nm\"\n",
     "                )\n",
-    "                grain_ax.plot(\n",
-    "                    interpolated_possible_beak_points[largest_exploration_index][1],\n",
-    "                    interpolated_possible_beak_points[largest_exploration_index][0],\n",
-    "                    \"o\",\n",
-    "                    c=\"green\",\n",
-    "                    markersize=6,\n",
+    "                if plot:\n",
+    "                    grain_ax.plot(\n",
+    "                        interpolated_possible_beak_points[largest_exploration_index][1],\n",
+    "                        interpolated_possible_beak_points[largest_exploration_index][0],\n",
+    "                        \"o\",\n",
+    "                        c=\"green\",\n",
+    "                        markersize=6,\n",
+    "                    )\n",
+    "\n",
+    "            if plot:\n",
+    "                explore_profile_fig, explore_profile_ax = plt.subplots()\n",
+    "                explore_profile_ax.plot(exploration_profile_nm)\n",
+    "                explore_profile_ax.set_title(\n",
+    "                    f\"grain {grain_index} molecule {molecule_index} slight defect index {slight_defect_index} exploration profile\"\n",
     "                )\n",
     "\n",
-    "            explore_profile_fig, explore_profile_ax = plt.subplots()\n",
-    "            explore_profile_ax.plot(exploration_profile_nm)\n",
-    "            explore_profile_ax.set_title(\n",
-    "                f\"grain {grain_index} molecule {molecule_index} slight defect index {slight_defect_index} exploration profile\"\n",
+    "        if plot:\n",
+    "            plt.gca().set_aspect(\"equal\", adjustable=\"box\")\n",
+    "            grain_ax.set_title(\n",
+    "                f\"grain {grain_index} molecule {molecule_index} bbox: {bbox} padding: {bbox_padding} circular: {is_circular}\"\n",
     "            )\n",
-    "\n",
-    "        plt.gca().set_aspect(\"equal\", adjustable=\"box\")\n",
-    "        grain_ax.set_title(\n",
-    "            f\"grain {grain_index} molecule {molecule_index} bbox: {bbox} padding: {bbox_padding} circular: {is_circular}\"\n",
-    "        )\n",
-    "        plt.show()\n",
+    "            plt.show()\n",
     "\n",
     "        # plot curvatures\n",
-    "        curvature_fig, curvature_ax = plt.subplots()\n",
-    "        curvature_ax.plot(resampled_curvatures, label=\"discrete curvatures\")\n",
-    "        curvature_ax.plot(np.abs(resampled_curvatures), label=\"discrete absolute cuvatures\")\n",
-    "        curvature_ax.legend()\n",
-    "        curvature_ax.set_ylim(-0.1, 0.5)\n",
-    "        curvature_ax.set_title(f\"grain {grain_index} molecule {molecule_index} curvatures\")\n",
-    "        plt.show()\n",
+    "        if plot:\n",
+    "            curvature_fig, curvature_ax = plt.subplots()\n",
+    "            curvature_ax.plot(resampled_curvatures, label=\"discrete curvatures\")\n",
+    "            curvature_ax.plot(np.abs(resampled_curvatures), label=\"discrete absolute cuvatures\")\n",
+    "            curvature_ax.legend()\n",
+    "            curvature_ax.set_ylim(-0.1, 0.5)\n",
+    "            curvature_ax.set_title(f\"grain {grain_index} molecule {molecule_index} curvatures\")\n",
+    "            plt.show()\n",
     "\n",
     "        grain_beak_data[molecule_index] = molecule_beak_data\n",
     "\n",
-    "    stats[grain_index] = grain_beak_data"
+    "    stats[grain_index] = grain_beak_data\n",
+    "\n",
+    "    if grain_index > 20:\n",
+    "        break"
    ]
   },
   {
@@ -405,7 +439,7 @@
     "fig, ax = plt.subplots()\n",
     "ax.bar(bar_xs_explored, bar_ys_explored)\n",
     "plt.title(\"Number of explored beaks per grain\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
