add function to see if sets of coords are too close

--- a/beaks-process-grain-dictionary.ipynb
+++ b/beaks-process-grain-dictionary.ipynb
@@ -81,13 +81,6 @@
     "    # plt.imshow(full_image)\n",
     "    # plt.show()\n",
     "\n",
-    "    # get crossing points from nodestats\n",
-    "\n",
-    "    # blob / crossing distinuishing\n",
-    "    # find blobs\n",
-    "    labelled_blobs = label(blob_mask)\n",
-    "    blob_regionprops = regionprops(labelled_blobs)\n",
-    "\n",
     "    # ignore erroneously small splines\n",
     "    min_splined_coords_num_points = 10\n",
     "\n",
@@ -143,7 +136,6 @@
     "            grain_fig, grain_ax = plt.subplots(figsize=(10, 10))\n",
     "            grain_ax.imshow(image)\n",
     "            # grain_ax.imshow(mask_thick, alpha=0.5)\n",
-    "            grain_ax.imshow(blob_mask, alpha=0.5)\n",
     "            grain_ax.plot(resampled_points_px[:, 1], resampled_points_px[:, 0], \"r\")\n",
     "            if node_coords_px.size > 0:\n",
     "                grain_ax.plot(node_coords_px[:, 1], node_coords_px[:, 0], \"b.\")\n",
@@ -347,12 +339,42 @@
     "            curvature_ax.set_title(f\"grain {grain_index} molecule {molecule_index} curvatures\")\n",
     "            plt.show()\n",
     "\n",
+    "        # Mark blobs too close to node coords\n",
+    "        blob_node_distance_threshold_nm = 8\n",
+    "        # find blobs\n",
+    "        labelled_blobs = label(blob_mask)\n",
+    "        blob_regionprops = regionprops(labelled_blobs)\n",
+    "        for blob_regionprop in blob_regionprops:\n",
+    "            blob_coords_px = blob_regionprop.coords\n",
+    "            blob_coords_nm = blob_coords_px * p2nm\n",
+    "            node_coords_nm = node_coords * p2nm\n",
+    "            # check if any blob coord is too close to any node coord\n",
+    "            blob_node_distances = np.linalg.norm(blob_coords_nm[:, None] - node_coords_nm, axis=2)\n",
+    "        \n",
+    "\n",
     "        grain_beak_data[molecule_index] = molecule_beak_data\n",
     "\n",
     "    stats[grain_index] = grain_beak_data\n",
     "\n",
     "    if grain_index > 20:\n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def coords_too_close(coords1: npt.NDArray, coords2: npt.NDArray, threshold: float) -> bool:\n",
+    "    \"\"\"Check if two sets of coordinates are too close to each other\"\"\"\n",
+    "\n",
+    "    for coord1 in coords1:\n",
+    "        for coord2 in coords2:\n",
+    "            if np.linalg.norm(coord1 - coord2) < threshold:\n",
+    "                return True\n",
+    "\n",
+    "    return False"
    ]
   },
   {
