--- a/shelterin-data-explore.ipynb
+++ b/shelterin-data-explore.ipynb
@@ -181,7 +181,102 @@
     "plt.xlabel(\"Total Branch Lengths\")\n",
     "plt.ylabel(\"Maximum Protein Volume\")\n",
     "plt.title(\"TEL80+S Total Branch Lengths vs Maximum Protein Volume\")\n",
-    "plt.show()\n"
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TBL & height for CTEL80"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# grab control TEL80s\n",
+    "data_tel80c = all_stats[all_stats[\"category\"] == \"Control_TEL80\"]\n",
+    "# eliminate rows where class == 2\n",
+    "data_tel80c = data_tel80c[data_tel80c[\"class_number\"] == 1]\n",
+    "\n",
+    "tbls = data_tel80c[\"total_branch_lengths\"]\n",
+    "median_heights = data_tel80c[\"height_median\"]\n",
+    "\n",
+    "# plot median heights vs TBL for TEL80s\n",
+    "plt.figure()\n",
+    "plt.scatter(tbls, median_heights)\n",
+    "plt.xlabel(\"Total Branch Lengths\")\n",
+    "plt.ylabel(\"Median Heights\")\n",
+    "plt.title(\"Control TEL80 Median Heights vs Total Branch Lengths\")\n",
+    "plt.show()\n",
+    "\n",
+    "mean_median_height = np.mean(median_heights)\n",
+    "std_median_height = np.std(median_heights)\n",
+    "print(f\"mean median height: {mean_median_height:.2e}, std median height: {std_median_height:.2e}\")\n",
+    "mean_tbl = np.mean(tbls)\n",
+    "std_tbl = np.std(tbls)\n",
+    "print(f\"mean tbl: {mean_tbl:.2e}, std tbl: {std_tbl:.2e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TBL for control_TEL12\n",
+    "\n",
+    "# grab only new data - ie data where filename contains a date in 2025\n",
+    "# cutoff_date = \"2025\"\n",
+    "# recent_data = all_stats[all_stats[\"image\"].str.contains(cutoff_date)]\n",
+    "\n",
+    "\n",
+    "data_tbl_tel12c = all_stats[all_stats[\"category\"] == \"Control_TEL12\"]\n",
+    "print(f\"all tel12c {len(data_tbl_tel12c)}\")\n",
+    "data_tbl_tel12s = all_stats[all_stats[\"category\"] == \"Shelterin_TEL12\"]\n",
+    "print(f\"all tel12s {len(data_tbl_tel12s)}\")\n",
+    "data_tbl_trf1 = all_stats[all_stats[\"category\"] == \"TRF1\"]\n",
+    "print(f\"all trf1 {len(data_tbl_trf1)}\")\n",
+    "data_tbl_trf2 = all_stats[all_stats[\"category\"] == \"TRF2\"]\n",
+    "print(f\"all trf2 {len(data_tbl_trf2)}\")\n",
+    "data_tbl_tel12c = data_tbl_tel12c[data_tbl_tel12c[\"class_number\"] == 1]\n",
+    "data_tbl_tel12s = data_tbl_tel12s[data_tbl_tel12s[\"class_number\"] == 1]\n",
+    "data_tbl_trf1 = data_tbl_trf1[data_tbl_trf1[\"class_number\"] == 1]\n",
+    "data_tbl_trf2 = data_tbl_trf2[data_tbl_trf2[\"class_number\"] == 1]\n",
+    "data_tbl_tel12c = data_tbl_tel12c[data_tbl_tel12c[\"subgrain_number\"] == 0]\n",
+    "data_tbl_tel12s = data_tbl_tel12s[data_tbl_tel12s[\"subgrain_number\"] == 0]\n",
+    "data_tbl_trf1 = data_tbl_trf1[data_tbl_trf1[\"subgrain_number\"] == 0]\n",
+    "data_tbl_trf2 = data_tbl_trf2[data_tbl_trf2[\"subgrain_number\"] == 0]\n",
+    "\n",
+    "print(f\"trf1 after only class 1 and only subgrain 0 {len(data_tbl_trf1)}\")\n",
+    "print(f\"trf2 after only class 1 and only subgrain 0 {len(data_tbl_trf2)}\")\n",
+    "\n",
+    "# merge the two dataframes\n",
+    "data_tbl_tel12 = pd.concat([data_tbl_tel12c, data_tbl_tel12s, data_tbl_trf1, data_tbl_trf2])\n",
+    "\n",
+    "plt.figure()\n",
+    "sns.stripplot(x=\"category\", y=\"total_branch_lengths\", data=data_tbl_tel12)\n",
+    "plt.title(f\"Total Branch Lengths for TEL12, TRF1, TRF2\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# area for trf1\n",
+    "data_area_trf1 = all_stats[all_stats[\"category\"] == \"TRF1\"]\n",
+    "data_area_trf1 = data_area_trf1[data_area_trf1[\"class_number\"] == 1]\n",
+    "\n",
+    "plt.figure()\n",
+    "sns.stripplot(data_area_trf1[\"area\"], jitter=True)\n",
+    "plt.title(\"TRF1 Area\")\n",
+    "plt.show()"
    ]
   }
  ],
